fixed thumbnails on mobile to be transparent and display title.

--- a/styles/style.css
+++ b/styles/style.css
@@ -917,11 +917,16 @@
 		width: 100%;
 		height: 100%;
 		position: relative;
+		opacity: .3;
+	}
+
+	.thumbnails_big img:hover {
+		opacity: .3;
 	}
 
 	.abouthero {
 		background-color: #9e1e62;
-		height: 260px;
+		height: 250px;
 		margin: -26px 0px 0px 0px;
 	}
 
@@ -990,7 +995,7 @@
 	}
 
 	h1.abouthome1 {
-		position: absolute;
+		position: relative;
 		font-family: 'proxima_nova_ltsemibold';
 		font-size: 18px;
 		line-height: 22px;
@@ -1032,14 +1037,14 @@
 	}
 
 	h4.abouthome2 {
-		position: absolute;
+		position: relative;
 		font-family: 'montserratlight';
 		font-size: 14px;
 		line-height: 20px;
 		font-weight: 400;
 		color: #ffffff;
 		width: 78%;
-		padding: 70px 0px 20px 40px;
+		padding: 0px 0px 20px 40px;
 	}
 
 	h4.abouttitle {
@@ -1049,6 +1054,7 @@
 		line-height: 20px;
 		margin-left: 20px;
 	}
+
 
 	p {
 		color: #000000;
@@ -1119,7 +1125,7 @@
 	}
 
 
-
+/*
 	h2.ic3401text.hide, h2.sciencecentertext.hide, h2.firsthandtext.hide, h2.dmdtext.hide, h2.drwctext.hide, h2.hipcitytext.hide {
 		display: none!important;
 	}
@@ -1127,6 +1133,7 @@
 	h2.ic3401text_big.hide_big, h2.firsthandtext_big.hide_big, h2.drwctext_big.hide_big, h2.hipcitytext_big.hide_big {
 		display: none!important;
 	}
+*/
 
 	.ic3401text {
 		position: absolute;
